<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#fff"
    android:orientation="vertical" >

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="@string/string_add_plants"
        android:textSize="22sp"
        android:background="#000"
        android:textColor="#fff"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/string_plant_name"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/et_plant_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginLeft="8dp"
            android:hint="@string/string_please_input_name"
            android:textColor="#000"
            android:textSize="18sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/string_plant_desc"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/et_plant_desc"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginLeft="5dp"
            android:hint="@string/please_input_plant_desc"
            android:textColor="#000"
            android:textSize="18sp" />
    </LinearLayout>

    <Button
        android:id="@+id/btn_more_pics"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:background="@drawable/bg_btn_selector"
        android:text="@string/string_choose_more_leaf"
        android:textColor="#fff"
         />
    
    <ImageView 
        android:id="@+id/iv_more_pics"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:contentDescription="@string/app_name"
        android:layout_gravity="center_horizontal"
        />

</LinearLayout>