<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    <LinearLayout 
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >
        <TextView 
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/string_file_name"
            android:layout_weight="1"
            />
        <EditText 
            android:id="@+id/et_pic_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/string_please_name_this_pic"
            android:layout_weight="4"
            />
        <Button 
            android:id="@+id/btn_pic_name"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:text="保存"
            android:layout_weight="1"
            android:background="@drawable/bg_btn_selector"
            android:textColor="#fff"
            />
        
    </LinearLayout>
    <ImageView 
        android:id="@+id/imgv_pic"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:contentDescription="@string/app_name"/>

</LinearLayout>
