<?xml version="1.0" encoding="utf-8"?>
<ViewFlipper xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/vf_multi_pages"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical" >

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            >

            <SurfaceView
                android:id="@+id/sfv_camera_view"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />
			<TextView 
			    android:layout_width="match_parent"
			    android:layout_height="wrap_content"
			    android:text="@string/string_please_place_pic_inside_red_rec"
			    android:textColor="#0ff"
			    android:gravity="center"
			    android:textSize="20sp"
			    android:layout_marginTop="20dp"
			    />
            
            
            <view.DrawRecLineImageView
                android:textAlignment="center"
                android:layout_width="match_parent"
                android:layout_height="match_parent" 
                android:contentDescription="@string/app_name"
                />
        </FrameLayout>

        <Button
            android:id="@+id/btn_take_pic"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_alignParentBottom="true"
            android:layout_margin="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:background="@drawable/bg_btn_selector"
            android:text="@string/string_take_pic"
            android:textColor="#fff" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical" >

        <ImageView
            android:id="@+id/iv_img_take"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:contentDescription="@string/app_name" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="5dp"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/btn_pic_for_sample"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_gravity="bottom"
                android:layout_marginLeft="10dp"
                android:layout_weight="1"
                android:background="@drawable/bg_btn_selector"
                android:text="@string/string_samples"
                android:textColor="#fff" />

            <Button
                android:id="@+id/btn_pic_for_pipei"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_gravity="bottom"
                android:layout_marginLeft="10dp"
                android:layout_weight="1"
                android:background="@drawable/bg_btn_selector"
                android:text="@string/string_pipei"
                android:textColor="#fff" />

            <Button
                android:id="@+id/btn_pic_for_rephoto"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_gravity="bottom"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_weight="1"
                android:background="@drawable/bg_btn_selector"
                android:text="@string/string_rephoto"
                android:textColor="#fff" />
        </LinearLayout>
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical" >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center_horizontal"
            android:text="@string/string_result"
            android:textSize="22sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:background="#fff"
            android:gravity="center_horizontal" />

        <ListView
            android:id="@+id/lv_find_result"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:divider="#fff"
            android:dividerHeight="1dp" />
    </LinearLayout>

</ViewFlipper>