<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="320dp"
    android:layout_height="wrap_content"
    android:background="#000"
    android:alpha="1"
    android:orientation="vertical" >
    <TextView 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/string_identity_check"
        android:gravity="center_horizontal"
        android:textSize="20sp"
        android:padding="10dp"
        android:background="#666"
        android:textColor="#fff"
        />
    <LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/username"
            android:textSize="20sp"
            android:textColor="#fff"
            android:layout_weight="1"
            />
        <EditText
            android:id="@+id/et_username"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:textColor="@color/color_myFav"
            android:inputType="text"
            android:layout_weight="3"/>
        
        
    </LinearLayout>
    <LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/password"
            android:textSize="20sp"
            android:textColor="#fff"
            android:layout_weight="1"
            />
        <EditText
            android:id="@+id/et_password"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:textColor="@color/color_myFav"
            android:inputType="textPassword"
            android:layout_weight="3"/>
        
        
    </LinearLayout>
     
    <LinearLayout
        android:layout_width="match_parent"
    	android:layout_height="wrap_content"
    	android:orientation="horizontal"
    	android:background="@drawable/bg_roundcorner_selector" 
        >
        
        <Button
            android:id="@+id/btn_change_database_optimistic"
            android:layout_width="match_parent"
    		android:layout_height="wrap_content" 
    		android:layout_weight="1"
    		android:background="@drawable/bg_roundcorner_selector" 
    		android:text="@string/string_optimistic"
    		android:padding="10dp"
    		android:textSize="18sp"
    		android:textColor="@color/color_FFF"
            />
        
         <TextView
        	android:layout_width="wrap_content"
        	android:layout_height="fill_parent"
        	android:width="0.5dp"
        	android:background="@color/diliver"/>
        
        <Button
            android:id="@+id/btn_change_database_negative"
            android:layout_width="match_parent"
    		android:layout_height="wrap_content" 
    		android:layout_weight="1"
    		android:background="@drawable/bg_roundcorner_selector" 
    		android:padding="10dp"
    		android:text="@string/string_negative"
    		android:textSize="18sp"
    		android:textColor="@color/color_FFF"
            />
        
    </LinearLayout>

   
        

</LinearLayout>
